<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_back"
    tools:context=".EditTaskActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="256dp"
        android:layout_height="33dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="166dp"
        android:text="@string/ChangeTask"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/roundedbutton"
        android:src="@drawable/arr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTask"
        android:layout_width="323dp"
        android:layout_height="36dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/editback"
        android:backgroundTint="@color/white"
        android:hint="@string/title"
        android:paddingStart="10dp"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/datetext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/datetext"
        android:layout_width="146dp"
        android:layout_height="29dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/editback"
        android:backgroundTint="@color/white"
        android:hint="@string/date"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:drawableLeft="@drawable/calendar"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <EditText
        android:id="@+id/timetext"
        android:layout_width="146dp"
        android:layout_height="29dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/editback"
        android:backgroundTint="@color/white"
        android:hint="@string/time"
        android:paddingStart="10dp"
        android:textSize="18dp"
        android:drawableLeft="@drawable/clock"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTask" >


    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="325dp"
        android:layout_height="93dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="126dp"
        android:background="@drawable/editback"
        android:backgroundTint="@color/white"
        android:hint="@string/decr"
        android:paddingStart="10dp"
        android:textAlignment="textStart"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTask" />

    <Button
        android:id="@+id/button2"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/enterbutton2"
        android:text="@string/del_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/enterbutton"
        android:text="@string/add_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>