<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green_back"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="145sp"
        android:layout_height="28sp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="166dp"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editLog"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/roundedbutton"
        android:src="@drawable/arr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editLog"
        android:layout_width="323dp"
        android:layout_height="36dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/editback"
        android:backgroundTint="@color/white"
        android:hint="@string/name"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="323dp"
        android:layout_height="36dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/editback"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLog" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="323dp"
        android:layout_height="36dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/editback"
        android:backgroundTint="@color/white"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="232dp"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:background="@drawable/enterbutton"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:onClick="NextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPass" />

</androidx.constraintlayout.widget.ConstraintLayout>